# r3

./: .gitignore  BOLO.md  MARS_SETUP.md  README.md  deploy.sh  mars-deck.html  red-rover-mockup.html  run.py  seed_demo.py  train_ruby_score.py
.claude/: settings.json
agent/: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
agent/clips/: README.md  diag.py  process_ruby_audio.py
agent/server/: main.py  orchestrator.py
agent/server/prompts/: cp_aware.md
agent/server/tools/: bolo.py  clone_voice.py  phone.py  voice_in.py  voice_out.py
agent/web/: index.html
docs/ruby/: mars.jfif
emotion_tracker/: api.py  bolo_guard.py  camera.py  detector.py  find_ruby.py  gemini_detector.py  monitor.py  mood_ring.py  mood_summary.py  person_registry.py
monitoring/: .gitignore  ENGINEER.md  demo_local.py  demo_video.py  demo_walkthrough.html  deploy.sh  dev_knowledge_graph.html  dev_knowledge_graph.json  knowledge_graph.py  mars_audit.sh  register_widget.js  requirements.txt  run.py  seed_demo.py  train_ruby_score.py
monitoring/agents/: ruby_assistant.py  ruby_assistant_from_mars.py
monitoring/emotion_tracker/: api.py  cloud_sync.py  event_log.py  face_encoder.py  gemini_detector.py  monitor.py  mood_ring.py  person_registry.py  ruby_score.py
monitoring/red-rover/: package-lock.json
monitoring/skills/: check_mood.py  day_summary.py  find_ruby.py  wave_hello.py
uploads/examples/: README.md
